# changelog-roller

./: Cargo.toml  ERROR_HANDLING.org  README.org  config.example.toml  flake.nix
.github/workflows/: publish.yml
crates/cli/: Cargo.toml
crates/cli/src/: config.rs  logging.rs  main.rs
crates/cli/tests/: integration_test.rs
crates/lib/: Cargo.toml
crates/lib/src/: lib.rs  operation.rs  roller.rs
crates/lib/tests/: roller.rs
src/: cli.rs
