[workspace]
resolver = "2"
members = [
  "crates/cli",
  "crates/lib",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["Logan Barnett <logustus@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/logustus/changelog-roller"

[workspace.dependencies]
# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }

# Utilities
# tap - Enables method chaining and reduces superfluous local variables
# that only exist to name intermediate results. Prefer .tap() over temporary
# variables when it improves readability.
tap = "1.0"

# CLI parsing
clap = { version = "4.5", features = ["derive", "env"] }

# Configuration
serde = { version = "1.0", features = ["derive"] }
toml = "1.1"

# Error handling
thiserror = "2.0"

# Org-mode parsing and AST manipulation
orgize = "0.9"

# Shared library
changelog-roller-lib = { path = "crates/lib" }
